--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      rel="icon"
+      href="https://itviec.com/assets/favicon-32x32-d43a09e697f5031d66cd29775069d94075d407571b2312f0058a680fa9e03ca5.png"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content='ITviec | Việc làm IT "Chất" Nhất Dành Cho Bạn'
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="apple-touch-icon"
+      href="https://itviec.com/assets/favicon-32x32-d43a09e697f5031d66cd29775069d94075d407571b2312f0058a680fa9e03ca5.png"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,10 +30,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>ITviec | Việc làm IT "Chất" Nhất Dành Cho Bạn</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>ITviec | Việc làm IT "Chất" Nhất Dành Cho Bạn.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
